173  new feature create library for generic pneumatic components (#205)
* Create draft PR for #173

* adds observation of alarms into AxoComponentView

* additions to prev + docu

* wip on generic pneumatics

* changed angry icon when component has errors to dizzy

* wip

* Pneumatic piston

* add pneumatics to pipeline

* mend

* Static messenger-concorent access solved

* some code cleanup + some TODO marks added for documentation

* AxoCylinder-cleanup

* AxoCylinder-another cleanup, plus some typo fixed

* wip

* component.pneumatics-message list moved to the .NET side

* Cognex insight: added messengers

* 0..249 array issue

* Cognex Dataman-messengers added

* wip

* Added Popover on help in AxoMessengerView

* wip

* wip

* Added Help header in AxoMessengerView

* adds axunit target

* AxoMessenger documentation updated

* AxoCognexVision documentation updated

* Cognex docu update

* Cognex Vision documentation updated

* targets

* wip

* fix targets

---------

Co-authored-by: PTKu <PTKu@users.noreply.github.com>
Co-authored-by: Peter <61538034+PTKu@users.noreply.github.com>
Co-authored-by: Tomas Kovac <tomas.kovac@mts.sk>
Co-authored-by: Branko Zachemsky <bzachemsky@gmail.com>

--- a/src/templates.simple/ctrl/apax.yml
+++ b/src/templates.simple/ctrl/apax.yml
@@ -1,6 +1,8 @@
 name: "axosimple"
 version: '0.1.4-alpha.79'
 type: app
+targets:
+  - axunit-llvm
 registries:
   '@ix-ax': https://npm.pkg.github.com/
 devDependencies:
@@ -18,8 +20,6 @@ scripts:
     - dotnet tool restore --no-cache
     - dotnet ixc
     - dotnet ixr
-  prebuild:
-    - apax update-targets
   postbuild: apax ixc
   download:
     - apax install
@@ -48,17 +48,6 @@ scripts:
     else
       echo "Environment variable AXTARGET not defined!!!"
     fi
-  update-targets: |
-    if [ $AXBUILDTARGET_1 ]; then
-      yq -i "del(.targets)" apax.yml
-      yq -i ".targets[0] = strenv(AXBUILDTARGET_1)" apax.yml
-      if [ $AXBUILDTARGET_2 ]; then
-        yq -i ".targets[1] = strenv(AXBUILDTARGET_2)" apax.yml
-      fi
-      if [ $AXBUILDTARGET_3 ]; then
-        yq -i ".targets[2] = strenv(AXBUILDTARGET_3)" apax.yml
-      fi
-    fi
   rr:
     - apax build
     - apax download
@@ -67,5 +56,4 @@ scripts:
     - ..\\scripts\\StartPlcSimAdvCli.exe
     - apax install
     - apax rr
-targets:
-  - plcsim
+  
