--- a/src/components.cognex.vision/app/apax.yml
+++ b/src/components.cognex.vision/app/apax.yml
@@ -1,10 +1,14 @@
 name: "axopen.components.cognex.vision.integrations"
 version: '0.1.4-alpha.79'
 type: app
+targets:
+  #- plcsim
+  - axunit-llvm
+  #- "1500" 
 devDependencies:
   "@ax/sdk": ^4.0.8
   "@ax/sld": 0.15.9
-  #"@ax/plc-mode": ^1.0.0
+  "@ax/stc": ^5.4.89
 dependencies:
   "@ix-ax/axopen.cognex.vision": '0.1.4-alpha.79'
   "@ix-ax/axopen.simatic1500": '0.1.4-alpha.79'
@@ -40,19 +44,6 @@ scripts:
     - apax install
     - apax build
     - apax download
-  update-targets: |
-    if [ $AXBUILDTARGET_1 ]; then
-      yq -i "del(.targets)" apax.yml
-      yq -i ".targets[0] = strenv(AXBUILDTARGET_1)" apax.yml
-      if [ $AXBUILDTARGET_2 ]; then
-        yq -i ".targets[1] = strenv(AXBUILDTARGET_2)" apax.yml
-      fi
-      if [ $AXBUILDTARGET_3 ]; then
-        yq -i ".targets[2] = strenv(AXBUILDTARGET_3)" apax.yml
-      fi
-    fi
-  prebuild:
-    - apax update-targets
   postbuild:
     - apax ixc
   watch:
@@ -72,5 +63,3 @@ scripts:
   r:
     - apax plc-mode set stop -t $AXTARGET -y
     - apax plc-mode set run -t $AXTARGET -y
-targets:
-  - plcsim
