--- a/src/components.pneumatics/app/apax.yml
+++ b/src/components.pneumatics/app/apax.yml
@@ -1,6 +1,8 @@
 name: "pneumaticcomponents"
 version: '0.1.4-alpha.79'
 type: app
+targets:
+  - axunit-llvm
 devDependencies:
   "@ax/sdk": 4.0.3
 dependencies:
@@ -38,19 +40,6 @@ scripts:
     - apax install
     - apax build
     - apax download
-  update-targets: |
-    if [ $AXBUILDTARGET_1 ]; then
-      yq -i "del(.targets)" apax.yml
-      yq -i ".targets[0] = strenv(AXBUILDTARGET_1)" apax.yml
-      if [ $AXBUILDTARGET_2 ]; then
-        yq -i ".targets[1] = strenv(AXBUILDTARGET_2)" apax.yml
-      fi
-      if [ $AXBUILDTARGET_3 ]; then
-        yq -i ".targets[2] = strenv(AXBUILDTARGET_3)" apax.yml
-      fi
-    fi
-  prebuild:
-    - apax update-targets
   postbuild:
     - apax ixc
   watch:
@@ -66,5 +55,3 @@ scripts:
     - START=$(date +%s)
     - apax do-it-all
     - echo $(date +%D)"-"$(date +%H)":"$(date +%M)":"$(date +%S) " - Finished in :" $(expr $(date +%s) - $START) "s"
-targets:
-  - plcsim
