misc improvements to template script and application

--- a/src/template.axolibrary/app/ix-blazor/librarytemplate.blazor/librarytemplate.blazor.csproj
+++ b/src/template.axolibrary/app/ix-blazor/librarytemplate.blazor/librarytemplate.blazor.csproj
@@ -13,7 +13,7 @@
     <ProjectReference Include="..\..\..\..\data\src\repositories\Json\AXOpen.Data.Json.csproj" />
     <ProjectReference Include="..\..\..\..\security\src\AXOpen.Security.Blazor\AXOpen.Security.Blazor.csproj" />
     <ProjectReference Include="..\..\..\src\dotnetlibs.blazor\dotnetlibs.blazor.csproj" />
-    <ProjectReference Include="..\..\ix\librarytemplate.csproj" />
+    <ProjectReference Include="..\..\ix\ix_librarytemplate.csproj" />
   </ItemGroup>
 
 </Project>
