--- a/src/template.axolibrary/app/apax.yml
+++ b/src/template.axolibrary/app/apax.yml
@@ -12,6 +12,7 @@ devDependencies:
   "@ax/sld": 0.15.9
 dependencies:
   "@ix-ax/axolib": 0.1.4-alpha.79
+  "@ix-ax/axopen.simatic1500": 0.1.4-alpha.79
 scripts:
   download:
     - apax install -L
