--- a/src/templates.simple/ctrl/apax.yml
+++ b/src/templates.simple/ctrl/apax.yml
@@ -2,6 +2,7 @@ name: "axosimple"
 version: '0.1.4-alpha.79'
 type: app
 targets:
+  - plcsim
   - axunit-llvm
 registries:
   '@ix-ax': https://npm.pkg.github.com/
@@ -11,7 +12,7 @@ devDependencies:
   "@ax/stc": ^5.4.89
 dependencies:
   "@ix-ax/axopen.data": '0.1.4-alpha.79'
-  "@ix-ax/axopen.inspectors": '0.1.4-alpha.79'
+  "@ix-ax/axopen.inspectors": '0.1.4-alpha.79' 
   "@ix-ax/axopen.simatic1500": '0.1.4-alpha.79'
 variables:
   APAX_BUILD_ARGS: [-d]
