--- a/src/components.pneumatics/app/apax.yml
+++ b/src/components.pneumatics/app/apax.yml
@@ -7,7 +7,7 @@ targets:
 devDependencies:
   "@ax/sdk": 4.0.3
 dependencies:
-  "@ix-ax/axopen_components_pneumatics": 0.1.4-alpha.79
+  "@ix-ax/axopen.components.pneumatics": 0.1.4-alpha.79
   "@ix-ax/axopen.simatic1500": '0.1.4-alpha.79'
 variables:
   APAX_BUILD_ARGS:
