--- a/src/integrations/ctrl/apax.yml
+++ b/src/integrations/ctrl/apax.yml
@@ -10,7 +10,7 @@ dependencies:
   "@ix-ax/axopen.data": '0.1.4-alpha.79'
   "@ix-ax/axopen.probers": '0.1.4-alpha.79'
   "@ix-ax/axopen.simatic1500": '0.1.4-alpha.79'
-  "@ix-ax/axopen.cognex.vision": '0.1.4-alpha.79'
+  "@ix-ax/axopen.components.cognex.vision": '0.1.4-alpha.79'
 variables:
   APAX_BUILD_ARGS: [-d]
 scripts:
