--- a/src/components.cognex.vision/app/apax.yml
+++ b/src/components.cognex.vision/app/apax.yml
@@ -10,7 +10,7 @@ devDependencies:
   "@ax/sld": 0.15.9
   "@ax/stc": ^5.4.89
 dependencies:
-  "@ix-ax/axopen.cognex.vision": '0.1.4-alpha.79'
+  "@ix-ax/axopen.components.cognex.vision": '0.1.4-alpha.79'
   "@ix-ax/axopen.simatic1500": '0.1.4-alpha.79'
 variables:
   APAX_BUILD_ARGS:
