--- a/src/templates.simple/axosimple.twin/axosimple.csproj
+++ b/src/templates.simple/axosimple.twin/axosimple.csproj
@@ -5,14 +5,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="AXSharp.Abstractions" Version="0.14.2-alpha.135" />
-    <PackageReference Include="AXSharp.Connector" Version="0.14.2-alpha.135" />
-    <PackageReference Include="AXSharp.Connector.S71500.WebAPI" Version="0.14.2-alpha.135" />
+    <PackageReference Include="AXSharp.Abstractions" Version="0.14.2-alpha.137" />
+    <PackageReference Include="AXSharp.Connector" Version="0.14.2-alpha.137" />
+    <PackageReference Include="AXSharp.Connector.S71500.WebAPI" Version="0.14.2-alpha.137" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include=".g\**" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\components.cognex.vision\src\AXOpen.Cognex.Vision\ix_ax_axopen_components_cognex_vision.csproj" />
+    <ProjectReference Include="..\..\components.pneumatics\src\AXOpen.Components.Pneumatics\ix_ax_axopen_components_pneumatics.csproj" />
     <ProjectReference Include="..\..\core\src\AXOpen.Core\ix_ax_axopen_core.csproj" />
     <ProjectReference Include="..\..\data\src\AXOpen.Data\ix_ax_axopen_data.csproj" />
     <ProjectReference Include="..\..\inspectors\src\AxOpen.Inspectors\ix_ax_axopen_inspectors.csproj" />
