--- a/docfx/articles/toc.yml
+++ b/docfx/articles/toc.yml
@@ -1,100 +1,5 @@
 - name: Introduction
-  href: intro.md
-- name: AXOpen.Core
-  href: ~/articles/core/README.md
-  items:
-  - name: AxoContext
-    href: ~/articles/core/AXOCONTEXT.md
-  - name: AxoObject
-    href: ~/articles/core/AXOOBJECT.md
-  - name: AxoTask
-    href: ~/articles/core/AXOTASK.md
-  - name: AxoToggleTask
-    href: ~/articles/core/AXOTOGGLETASK.md
-  - name: AxoMomentaryTask
-    href: ~/articles/core/AXOMOMENTARYTASK.md
-  - name: AxoRemoteTask
-    href: ~/articles/core/AXOREMOTETASK.md  
-  - name: AxoStep
-    href: ~/articles/core/AXOSTEP.md
-  - name: AxoSequencer
-    href: ~/articles/core/AXOSEQUENCER.md  
-  - name: AxoSequencerContainer
-    href: ~/articles/core/AXOSEQUENCERCONTAINER.md  
-  - name: AxoComponent
-    href: ~/articles/core/AXOCOMPONENT.md  
-  - name: AxoDialog
-    href: ~/articles/core/AXODIALOG.md
-  - name: AxoAlertDialog
-    href: ~/articles/core/AXOALERTDIALOG.md  
-  - name: AxoTestList
-    href: ~/articles/core/AXOTEXTLIST.md  
-- name: AXOpen.Data
-  href: ~/articles/data/README.md
-  items:
-      - name: Data exchange
-        href: ~/articles/data/AxoDataExchange.md
-      - name: Data fragmets exchange
-        href: ~/articles/data/AxoDataFragmentExchange.md
-
-- name: AXOpen.Inspectors
-  href: ~/articles/inspectors/README.md
-  items:
-      - name: AxoDigitalInspector
-        href: ~/articles/inspectors/AXODIGITALINSPECTOR.md
-      - name: AxoAnalogueInspector
-        href: ~/articles/inspectors/AXOANALOGUEINSPECTOR.md
-      - name: AxoDataInspector
-        href: ~/articles/inspectors/AXODATAINSPECTOR.md
-- name: AXOpen.Messaging
-  href: ~/articles/messaging/README.md
-  items:
-      - name: AxoMessenger
-        href: ~/articles/messaging/AXOMESSENGER.md
-- name: AXOpen.Components
-  href: ~/articles/components/README.md
-  items:      
-      - name: AxoElements
-        href: ~/articles/components/AXOPENELEMENTS/README.md
-        items:
-            - name: AXODI
-              href: ~/articles/components/AXOPENELEMENTS/AXODI.md
-            - name: AXODO
-              href: ~/articles/components/AXOPENELEMENTS/AXODO.md
-            - name: AXOAI
-              href: ~/articles/components/AXOPENELEMENTS/AXOAI.md
-            - name: AXOAO
-              href: ~/articles/components/AXOPENELEMENTS/AXOAO.md
-      - name: AxoCognexVision
-        href: ~/articles/components/AXOPENCOGNEVISION/README.md
-        items:
-            - name: V_6_0_0_0
-              href: ~/articles/components/AXOPENCOGNEVISION/AXOPENCOGNEVISION_V_6_0_0_0.md    
-      - name: AxoPneumatics
-        href: ~/articles/components/AXOPENPNEUMATICS/README.md
-        items:
-            - name: AxoCylinder
-              href: ~/articles/components/AXOPENPNEUMATICS/AXOCYLINDER.md
-
-- name: AXOpen.Logging
-  href: ~/articles/logging/README.md
-  items:
-      - name: AxoLogger
-        href: ~/articles/logging/AXOLOGGER.md
-- name: AXOpen.Security
-  href: ~/articles/security/README.md
-  items:
-      - name: Installation
-        href: ~/articles/security/INSTALLATION.md
-- name: AXOpen.Timers
-  href: ~/articles/timers/README.md
-  items:
-      - name: OnDelayTimer
-        href: ~/articles/timers/ONDELAYTIMER.md
-      - name: OffDelayTimer
-        href: ~/articles/timers/OFFDELAYTIMER.md
-      - name: Pulse
-        href: ~/articles/timers/PULSETIMER.md
+  href: index.md
 - name: Templates and app notes        
   href: ~/articles/notes/README.md
   items:
@@ -105,7 +10,7 @@
   - name: Server configuration
     href: ~/articles/configuration/README.md
   - name: Client Identification
-    href: ~/articles/clientIdentification/README.md
+    href: ~/clientchat/index.html
   - name: Embedding assets in nuget package
     href: ~/articles/notes/Assets_in_nuget_package.md  
 - name: Dev guidelines        
