--- a/src/components.elements/toc.yml
+++ b/src/components.elements/toc.yml
@@ -1,2 +1,11 @@
 - name: Components.Elements
   href: index.md
+  items:
+  - name: Digital Input
+    href: docs/AXODI.md
+  - name: Digital Output
+    href: docs/AXODO.md  
+  - name: Analog Input
+    href: docs/AXOAI.md
+  - name: Analog Output
+    href: docs/AXOAO.md      
