packages are now cpm

--- a/src/components.cognex.vision/src/AXOpen.Cognex.Vision/ix_ax_axopen_components_cognex_vision.csproj
+++ b/src/components.cognex.vision/src/AXOpen.Cognex.Vision/ix_ax_axopen_components_cognex_vision.csproj
@@ -7,14 +7,10 @@
 		<RootNamespace>AXOpen.Cognex.Vision</RootNamespace>
 	</PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="GitVersion.MsBuild" Version="5.10.3">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="AXSharp.Abstractions" Version="0.14.2-alpha.138" />
-		<PackageReference Include="AXSharp.Connector" Version="0.14.2-alpha.138" />
-		<PackageReference Include="AXSharp.Connector.S71500.WebAPI" Version="0.14.2-alpha.138" />
+	<ItemGroup>		
+		<PackageReference Include="AXSharp.Abstractions"/>
+		<PackageReference Include="AXSharp.Connector"/>
+		<PackageReference Include="AXSharp.Connector.S71500.WebAPI"/>
 	</ItemGroup>
 
   <ItemGroup>
