--- a/src/data/src/repositories/RavenDb/AXOpen.Data.RavenDb/AXOpen.Data.RavenDb.csproj
+++ b/src/data/src/repositories/RavenDb/AXOpen.Data.RavenDb/AXOpen.Data.RavenDb.csproj
@@ -6,12 +6,8 @@
 		</PropertyGroup> 
   
   
-	<ItemGroup>
-		<PackageReference Include="GitVersion.MsBuild" Version="5.10.3">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="RavenDB.Client" Version="5.3.101" />
+	<ItemGroup>		
+		<PackageReference Include="RavenDB.Client"/>
 		<ProjectReference Include="..\..\..\..\..\base\src\AXOpen.Base.Abstractions\AXOpen.Base.Abstractions.csproj" />
 	</ItemGroup>
 </Project>
