--- a/src/integrations/tests/AXOpen.Integration.Tests/axopen_integration_tests_L3.csproj
+++ b/src/integrations/tests/AXOpen.Integration.Tests/axopen_integration_tests_L3.csproj
@@ -8,21 +8,17 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="GitVersion.MsBuild" Version="5.10.3">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
-    <PackageReference Include="RavenDB.Embedded" Version="5.3.108" />
-    <PackageReference Include="Siemens.Simatic.S7.Webserver.API" Version="2.1.4" />
-    <PackageReference Include="xunit" Version="2.4.2" />
-	      <PackageReference Include="RavenDB.Embedded" Version="5.3.108" />	    
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
+  <ItemGroup>   
+    <PackageReference Include="Microsoft.NET.Test.Sdk"/>
+    <PackageReference Include="RavenDB.Embedded"/>
+    <PackageReference Include="Siemens.Simatic.S7.Webserver.API"/>
+    <PackageReference Include="xunit"/>
+	  <PackageReference Include="RavenDB.Embedded"/>	    
+    <PackageReference Include="xunit.runner.visualstudio">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="coverlet.collector" Version="3.2.0">
+    <PackageReference Include="coverlet.collector">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
