--- a/src/base/src/AXOpen.Logging/AXOpen.Logging.Serilog.csproj
+++ b/src/base/src/AXOpen.Logging/AXOpen.Logging.Serilog.csproj
@@ -5,8 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-	  <PackageReference Include="NSubstitute" Version="5.0.0" />
-	  <PackageReference Include="Serilog" Version="2.12.0" />
+	  <PackageReference Include="NSubstitute"/>
+	  <PackageReference Include="Serilog"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AXOpen.Base.Abstractions\AXOpen.Base.Abstractions.csproj" />
