--- a/src/components.elements/app/ix/ElementsComponents.csproj
+++ b/src/components.elements/app/ix/ElementsComponents.csproj
@@ -7,9 +7,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AXSharp.Abstractions" Version="0.14.2-alpha.138" />
-		<PackageReference Include="AXSharp.Connector" Version="0.14.2-alpha.138" />
-		<PackageReference Include="AXSharp.Connector.S71500.WebAPI" Version="0.14.2-alpha.138" />
+		<PackageReference Include="AXSharp.Abstractions"/>
+		<PackageReference Include="AXSharp.Connector"/>
+		<PackageReference Include="AXSharp.Connector.S71500.WebAPI"/>
 	</ItemGroup>
 
 	<ItemGroup>
