--- a/src/core/app/ix-blazor/axopencore.blazor/axopen_integrations_blazor.csproj
+++ b/src/core/app/ix-blazor/axopencore.blazor/axopen_integrations_blazor.csproj
@@ -15,12 +15,8 @@
   </ItemGroup>
 
 
-	<ItemGroup>
-		<PackageReference Include="GitVersion.MsBuild" Version="5.10.3">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="AXSharp.Presentation.Blazor.Controls" Version="0.14.2-alpha.138" />
+	<ItemGroup>		
+		<PackageReference Include="AXSharp.Presentation.Blazor.Controls"/>
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\..\..\..\base\src\AXOpen.Base.Abstractions\AXOpen.Base.Abstractions.csproj" />
