--- a/src/data/src/AXOpen.Data.Blazor/axopen_data_blazor.csproj
+++ b/src/data/src/AXOpen.Data.Blazor/axopen_data_blazor.csproj
@@ -13,12 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
-    <PackageReference Include="GitVersion.MsBuild" Version="5.10.3">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.3" />
+    <PackageReference Include="CommunityToolkit.Mvvm"/>    
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web"/>
   </ItemGroup>
 
   <ItemGroup>
