--- a/src/data/src/exporters/AXOpen.Data.Exporters.Excel/AXOpen.Data.Exporters.Excel.csproj
+++ b/src/data/src/exporters/AXOpen.Data.Exporters.Excel/AXOpen.Data.Exporters.Excel.csproj
@@ -8,11 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="ClosedXML" Version="0.102.1" />
-		<PackageReference Include="GitVersion.MsBuild" Version="5.10.3">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
+		<PackageReference Include="ClosedXML"/>		
 	</ItemGroup>
 
 	<ItemGroup>
