--- a/src/data/tests/AXOpen.Repository.Integration.Tests_L1/axopen_repository_integration_tests_L1.csproj
+++ b/src/data/tests/AXOpen.Repository.Integration.Tests_L1/axopen_repository_integration_tests_L1.csproj
@@ -6,16 +6,12 @@
 	</PropertyGroup>
 
 
-	<ItemGroup>
-		<PackageReference Include="GitVersion.MsBuild" Version="5.10.3">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-		<PackageReference Include="nunit" Version="3.13.3" />
-		<PackageReference Include="JunitXml.TestLogger" Version="3.0.124" />
-	<PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+	<ItemGroup>		
+		<PackageReference Include="Newtonsoft.Json"/>
+		<PackageReference Include="nunit"/>
+		<PackageReference Include="JunitXml.TestLogger"/>
+		<PackageReference Include="NUnit3TestAdapter"/>
+		<PackageReference Include="Microsoft.NET.Test.Sdk"/>
 	</ItemGroup>
 
 	<ItemGroup>
