--- a/src/data/tests/AXOpen.Repository.Integration.Tests_L3/axopen_repository_integration_tests_L3.csproj
+++ b/src/data/tests/AXOpen.Repository.Integration.Tests_L3/axopen_repository_integration_tests_L3.csproj
@@ -7,12 +7,12 @@
 
 
 	<ItemGroup>
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-		<PackageReference Include="nunit" Version="3.13.3" />
-		<PackageReference Include="JunitXml.TestLogger" Version="3.0.124" />
-	<PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
-		<PackageReference Include="RavenDB.Embedded" Version="5.3.108" />
+		<PackageReference Include="Newtonsoft.Json"/>
+		<PackageReference Include="nunit"/>
+		<PackageReference Include="JunitXml.TestLogger"/>
+		<PackageReference Include="NUnit3TestAdapter"/>
+		<PackageReference Include="Microsoft.NET.Test.Sdk"/>
+		<PackageReference Include="RavenDB.Embedded"/>
   </ItemGroup>
 
 	<ItemGroup>
