--- a/src/inspectors/src/AxOpen.Inspectors/ix_ax_axopen_inspectors.csproj
+++ b/src/inspectors/src/AxOpen.Inspectors/ix_ax_axopen_inspectors.csproj
@@ -39,9 +39,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AXSharp.Abstractions" Version="0.14.2-alpha.138" />
-		<PackageReference Include="AXSharp.Connector" Version="0.14.2-alpha.138" />
-		<PackageReference Include="GitVersion.MsBuild" Version="5.10.3">
+		<PackageReference Include="AXSharp.Abstractions"/>
+		<PackageReference Include="AXSharp.Connector"/>
+		<PackageReference Include="GitVersion.MsBuild">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
