--- a/src/probers/tests/AXOpen.Probers.Tests/axopen_probers_tests_L3.csproj
+++ b/src/probers/tests/AXOpen.Probers.Tests/axopen_probers_tests_L3.csproj
@@ -20,19 +20,15 @@
 		</None>
 	</ItemGroup>
 
-	<ItemGroup>
-    <PackageReference Include="GitVersion.MsBuild" Version="5.10.3">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
-    <PackageReference Include="xunit" Version="2.4.2" />
-    <PackageReference Include="AXSharp.Connector.S71500.WebAPI" Version="0.14.2-alpha.138" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
+	<ItemGroup>  
+    <PackageReference Include="Microsoft.NET.Test.Sdk"/>
+    <PackageReference Include="xunit"/>
+    <PackageReference Include="AXSharp.Connector.S71500.WebAPI"/>
+    <PackageReference Include="xunit.runner.visualstudio">
 	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="coverlet.collector" Version="3.2.0">
+    <PackageReference Include="coverlet.collector">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
