--- a/src/templates.simple/axosimple.app/axosimple.hmi.csproj
+++ b/src/templates.simple/axosimple.app/axosimple.hmi.csproj
@@ -24,8 +24,8 @@
 	</ItemGroup>-->
 
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.Extensions.Localization" Version="7.0.9" />
-	  <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
+	  <PackageReference Include="Microsoft.Extensions.Localization"/>
+	  <PackageReference Include="Serilog.Sinks.Console"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\base\src\AXOpen.Logging\AXOpen.Logging.Serilog.csproj" />
