--- a/src/templates.simple/axosimple.twin/axosimple.csproj
+++ b/src/templates.simple/axosimple.twin/axosimple.csproj
@@ -5,9 +5,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="AXSharp.Abstractions" Version="0.14.2-alpha.138" />
-    <PackageReference Include="AXSharp.Connector" Version="0.14.2-alpha.138" />
-    <PackageReference Include="AXSharp.Connector.S71500.WebAPI" Version="0.14.2-alpha.138" />
+    <PackageReference Include="AXSharp.Abstractions"/>
+    <PackageReference Include="AXSharp.Connector"/>
+    <PackageReference Include="AXSharp.Connector.S71500.WebAPI"/>
   </ItemGroup>
   <ItemGroup>
     <Compile Include=".g\**" />
