--- a/src/timers/ctrl/ix/ix_ax_axopen_timers.csproj
+++ b/src/timers/ctrl/ix/ix_ax_axopen_timers.csproj
@@ -6,8 +6,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AXSharp.Abstractions" Version="0.14.2-alpha.138" />
-		<PackageReference Include="AXSharp.Connector" Version="0.14.2-alpha.138" />
+		<PackageReference Include="AXSharp.Abstractions"/>
+		<PackageReference Include="AXSharp.Connector"/>
 	</ItemGroup>
 
 	<ItemGroup>
