--- a/src/tools/src/axo.snippetify/axo.snippetify.csproj
+++ b/src/tools/src/axo.snippetify/axo.snippetify.csproj
@@ -7,6 +7,6 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="CommandLineParser" Version="2.9.1" />
+		<PackageReference Include="CommandLineParser"/>
 	</ItemGroup>	
 </Project>
