--- a/src/probers/ctrl/apax.yml
+++ b/src/probers/ctrl/apax.yml
@@ -1,12 +1,12 @@
 name: "@ix-ax/axopen.probers"
-version: '0.1.4-alpha.79'
+version: '0.0.0-dev.0'
 type: lib
 targets:
   - axunit-llvm
 files:
   - src
 dependencies:
-  "@ix-ax/axopen.core": '0.1.4-alpha.79'
+  "@ix-ax/axopen.core": '0.0.0-dev.0'
 devDependencies:
   "@ax/sdk": ^4.0.8
 variables:
