--- a/src/components.cognex.vision/ctrl/apax.yml
+++ b/src/components.cognex.vision/ctrl/apax.yml
@@ -1,5 +1,5 @@
 name: "@ix-ax/axopen.components.cognex.vision"
-version: '0.1.4-alpha.79'
+version: '0.0.0-dev.0'
 type: lib
 targets:
   - axunit-llvm
@@ -13,6 +13,6 @@ scripts:
   postbuild:
     - dotnet ixc
 dependencies:
-  "@ix-ax/axopen.components.abstractions": '0.1.4-alpha.79'
-  "@ix-ax/axopen.core": '0.1.4-alpha.79'
-  "@ix-ax/axopen.utils": '0.1.4-alpha.79'
+  "@ix-ax/axopen.components.abstractions": '0.0.0-dev.0'
+  "@ix-ax/axopen.core": '0.0.0-dev.0'
+  "@ix-ax/axopen.utils": '0.0.0-dev.0'
