--- a/src/inspectors/app/apax.yml
+++ b/src/inspectors/app/apax.yml
@@ -12,8 +12,8 @@ devDependencies:
   "@ax/sld": 0.15.9 
   "@ax/stc": ^5.4.89 
 dependencies:
-  "@ix-ax/axopen.inspectors": 0.1.4-alpha.79
-  "@ix-ax/axopen.simatic1500": '0.1.4-alpha.79'
+  "@ix-ax/axopen.inspectors": '0.0.0-dev.0'
+  "@ix-ax/axopen.simatic1500": '0.0.0-dev.0'
 scripts:
   download:
     - apax install -L
