--- a/src/inspectors/ctrl/apax.yml
+++ b/src/inspectors/ctrl/apax.yml
@@ -1,5 +1,5 @@
 name: "@ix-ax/axopen.inspectors"
-version: '0.1.4-alpha.79'
+version: '0.0.0-dev.0'
 type: lib
 targets:
   - axunit-llvm
@@ -12,7 +12,7 @@ scripts:
   postbuild:
     - dotnet ixc
 dependencies:
-  "@ix-ax/axopen.timers": '0.1.4-alpha.79'
-  "@ix-ax/axopen.core": '0.1.4-alpha.79'
+  "@ix-ax/axopen.timers": '0.0.0-dev.0'
+  "@ix-ax/axopen.core": '0.0.0-dev.0'
   "@ax/sld": ^1.0.11
-  #"@ix-ax/axopen.simatic1500": '0.1.4-alpha.79'
+  #"@ix-ax/axopen.simatic1500": '0.0.0-dev.0'
