--- a/src/integrations/ctrl/apax.yml
+++ b/src/integrations/ctrl/apax.yml
@@ -1,5 +1,5 @@
 name: "axopen.integrations"
-version: '0.1.4-alpha.79'
+version: '0.0.0-dev.0'
 type: app
 targets:
   - axunit-llvm
@@ -8,10 +8,10 @@ devDependencies:
   "@ax/sdk": ^4.0.8
   "@ax/sld": ^0.15.9
 dependencies:
-  "@ix-ax/axopen.data": '0.1.4-alpha.79'
-  "@ix-ax/axopen.probers": '0.1.4-alpha.79'
-  "@ix-ax/axopen.simatic1500": '0.1.4-alpha.79'
-  "@ix-ax/axopen.components.cognex.vision": '0.1.4-alpha.79'
+  "@ix-ax/axopen.data": '0.0.0-dev.0'
+  "@ix-ax/axopen.probers": '0.0.0-dev.0'
+  "@ix-ax/axopen.simatic1500": '0.0.0-dev.0'
+  "@ix-ax/axopen.components.cognex.vision": '0.0.0-dev.0'
 variables:
   APAX_BUILD_ARGS: [-d]
 scripts:
