--- a/src/probers/app/apax.yml
+++ b/src/probers/app/apax.yml
@@ -11,7 +11,7 @@ devDependencies:
   "@ax/sdk": ^4.0.8
   "@ax/sld": 0.15.9
 dependencies:
-  "@ix-ax/axopen.probers": 0.1.4-alpha.79
+  "@ix-ax/axopen.probers": '0.0.0-dev.0'
 scripts:
   download:
     - apax install -L
