--- a/src/template.axolibrary/ctrl/apax.yml
+++ b/src/template.axolibrary/ctrl/apax.yml
@@ -1,5 +1,5 @@
 name: "@ix-ax/axolib"
-version: '0.1.4-alpha.79'
+version: '0.0.0-dev.0'
 type: lib
 targets:
   - axunit-llvm
@@ -11,5 +11,5 @@ scripts:
   postbuild:
     - dotnet ixc
 dependencies:
-  "@ix-ax/axopen.components.abstractions": '0.1.4-alpha.79'
-  "@ix-ax/axopen.core": 0.1.4-alpha.79
+  "@ix-ax/axopen.components.abstractions": '0.0.0-dev.0'
+  "@ix-ax/axopen.core": '0.0.0-dev.0'
