--- a/src/templates.simple/ctrl/apax.yml
+++ b/src/templates.simple/ctrl/apax.yml
@@ -1,5 +1,5 @@
 name: "axosimple"
-version: '0.1.4-alpha.79'
+version: '0.0.0-dev.0'
 type: app
 targets:
   - plcsim
@@ -11,12 +11,12 @@ devDependencies:
   "@ax/sld": ^0.15.9
   "@ax/stc": ^5.4.89
 dependencies:
-  "@ix-ax/axopen.data": '0.1.4-alpha.79'
-  "@ix-ax/axopen.inspectors": '0.1.4-alpha.79' 
-  "@ix-ax/axopen.components.pneumatics": '0.1.4-alpha.79'
-  "@ix-ax/axopen.components.elements": '0.1.4-alpha.79'
-  "@ix-ax/axopen.components.cognex.vision": '0.1.4-alpha.79'
-  "@ix-ax/axopen.simatic1500": '0.1.4-alpha.79'
+  "@ix-ax/axopen.data": '0.0.0-dev.0'
+  "@ix-ax/axopen.inspectors": '0.0.0-dev.0' 
+  "@ix-ax/axopen.components.pneumatics": '0.0.0-dev.0'
+  "@ix-ax/axopen.components.elements": '0.0.0-dev.0'
+  "@ix-ax/axopen.components.cognex.vision": '0.0.0-dev.0'
+  "@ix-ax/axopen.simatic1500": '0.0.0-dev.0'
   
   
 variables:
