--- a/.github/workflows/pr-dev.yml
+++ b/.github/workflows/pr-dev.yml
@@ -27,11 +27,4 @@ jobs:
       run: dotnet build cake/Build.csproj
                        
     - name: "Run build script"
-      run: dotnet run --project cake/Build.csproj --do-test true --do-pack true --test-level 1      
-    - name: Test Report
-      uses: dorny/test-reporter@v1
-      if: success() || failure()
-      with:
-        name: Test report
-        path: 'TestResults/*.xml'   
-        reporter: dotnet-trx
+      run: dotnet run --project cake/Build.csproj --do-test --do-pack --test-level 1      
