preparing for testing - in progress

--- a/src/TestSandbox/ctrl/apax.yml
+++ b/src/TestSandbox/ctrl/apax.yml
@@ -13,7 +13,7 @@ dependencies:
   "@ix-ax/axopen.simatic1500": '0.1.4-alpha.79'
   "@ix-ax/axopen.probers": '0.1.4-alpha.79'
   "@ix-ax/axopen.cognex.vision": '0.1.4-alpha.79'
-  "@ix-ax/axopen_components_pneumatics": ^0.1.4-alpha.79
+  "@ix-ax/axopen_components_pneumatics": '0.1.4-alpha.79'
   "@ax/system-serde": ^2.0.2
 variables:
   APAX_BUILD_ARGS: [-d]
