--- a/src/components.pneumatics/docs/toc.yml
+++ b/src/components.pneumatics/docs/toc.yml
@@ -3,5 +3,8 @@ items:
   href: README.md
 - name: HowTos
   href: HOWTO.md
+  items:
+  - name: Cylinder
+    href: AXOCYLINDER.md
 - name: Troubleshooting
   href: TROUBLES.md
